// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AuthWall> renders a spinner when loading 1`] = `
<AbsoluteCenter
  vertical={true}
>
  <CircularLoader
    dataTest="dhis2-uicore-circularloader"
  />
  Checking permissions
</AbsoluteCenter>
`;

exports[`<AuthWall> renders an error message for unauthorized users 1`] = `
<FullscreenError
  message="You are not authorized"
/>
`;

exports[`<AuthWall> renders fetching errors if they occur 1`] = `
<FullscreenError
  message="Something went wrong"
/>
`;

exports[`<AuthWall> renders the children for users that are authorized 1`] = `
<Fragment>
  Child
</Fragment>
`;
